@@ -1,5 +1,9 @@
 package net.ttddyy.dsproxy.proxy;
 
+import net.ttddyy.dsproxy.ConnectionInfo;
+import net.ttddyy.dsproxy.listener.MethodExecutionContext;
+import net.ttddyy.dsproxy.listener.ProxyDataSourceListener;
+
 import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Method;
 import java.sql.SQLException;
@@ -70,6 +74,51 @@ public abstract class CallbackSupport {
         } catch (InvocationTargetException ex) {
             throw ex.getTargetException();
         }
+    }
+
+    @FunctionalInterface
+    public interface MethodExecutionCallback {
+        Object execute(MethodExecutionContext methodExecutionContext, Object proxyTarget, Method targetMethod, Object[] targetArgs) throws Throwable;
+    }
+
+    protected Object proceedMethodExecution(MethodExecutionCallback callback, ProxyConfig proxyConfig,
+                                Object proxyTarget, ConnectionInfo connectionInfo, Method method,
+                                Object[] args) throws Throwable {
+
+        MethodExecutionContext methodContext = MethodExecutionContext.Builder.create()
+                .target(proxyTarget)
+                .method(method)
+                .methodArgs(args)
+                .connectionInfo(connectionInfo)
+                .proxyConfig(proxyConfig)
+                .build();
+
+        ProxyDataSourceListener methodExecutionListener = proxyConfig.getListeners();
+        methodExecutionListener.beforeMethod(methodContext);
+
+        // method and args may be replaced in MethodExecutionListener
+        Method methodToInvoke = methodContext.getMethod();
+        Object[] methodArgsToInvoke = methodContext.getMethodArgs();
+
+        long beforeTime = System.currentTimeMillis();
+        Object result = null;
+        Throwable thrown = null;
+        try {
+            result = callback.execute(methodContext, proxyTarget, methodToInvoke, methodArgsToInvoke);
+        } catch (Throwable throwable) {
+            thrown = throwable;
+            throw throwable;
+        } finally {
+            long afterTime = System.currentTimeMillis();
+            long elapsedTime = afterTime - beforeTime;
+
+            methodContext.setElapsedTime(elapsedTime);
+            methodContext.setResult(result);
+            methodContext.setThrown(thrown);
+
+            methodExecutionListener.afterMethod(methodContext);
+        }
+        return result;
     }
 
 }
